[package]
name = "bevy-survivor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.bevy]
version = "0.12.0"
default-features = false
features = [
    # Bevy functionality:
    "bevy_asset",         # Assets management
    "bevy_scene",         # Scenes management
    "bevy_winit",         # Window management (cross-platform Winit backend)
    "bevy_render",        # Rendering framework core
    "bevy_core_pipeline", # Common rendering abstractions

    # Development/Debug features:
    "dynamic_linking", # Dynamic linking for faster compile-times
]

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
